MULTISITE-101 : Update Selenium tests

--- a/sites/all/modules/features/custom/ec_profiles/selenium/tc/edit_own_profile.html
+++ b/sites/all/modules/features/custom/ec_profiles/selenium/tc/edit_own_profile.html
@@ -13,23 +13,28 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en</td>
+	<td>/multisite_drupal_wde/?q=en</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>css=li.menu-14.last &gt; a</td>
+	<td>link=Log out</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=login</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>fmr_cm</td>
+	<td>user_pr1</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-pass</td>
-	<td>fmr</td>
+	<td>pass</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -67,14 +72,19 @@
 	<td></td>
 </tr>
 <tr>
+	<td>clickAndWait</td>
+	<td>link=login</td>
+	<td></td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>fmr_mb</td>
+	<td>user_pr2</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-pass</td>
-	<td>fmr</td>
+	<td>pass</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
