--- a/sites/all/modules/features/custom/f_a_q/selenium/tc/delete.html
+++ b/sites/all/modules/features/custom/f_a_q/selenium/tc/delete.html
@@ -13,7 +13,32 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en</td>
+	<td>/multisite_drupal_wde</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>xpath=(//a[contains(text(),'Log out')])[2]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-name</td>
+	<td>user_faq</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-pass</td>
+	<td>pass</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
 	<td></td>
 </tr>
 <tr>
@@ -46,7 +71,6 @@
 	<td>css=div.messages.status</td>
 	<td>Status message F.A.Q Question test updated has been deleted.</td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
