--- a/sites/all/modules/features/custom/f_a_q/selenium/tc/read.html
+++ b/sites/all/modules/features/custom/f_a_q/selenium/tc/read.html
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en</td>
+	<td>/multisite_drupal_wde</td>
 	<td></td>
 </tr>
 <tr>
@@ -23,12 +23,12 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>//div[@id='block-system-main']/div/div/div[2]/div/ol/li[3]/div/span</td>
+	<td>link=FAQ01</td>
 	<td></td>
 </tr>
 <tr>
 	<td>assertTextPresent</td>
-	<td>Answer test</td>
+	<td>Answer01</td>
 	<td></td>
 </tr>
 </tbody></table>
