--- a/sites/all/modules/features/custom/newsletters/selenium/tc/manage.html
+++ b/sites/all/modules/features/custom/newsletters/selenium/tc/manage.html
@@ -4,16 +4,16 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>as admin</title>
+<title>manage</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">as admin</td></tr>
+<tr><td rowspan="1" colspan="3">manage</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/</td>
+	<td>/multisite_drupal_wde/?q=en</td>
 	<td></td>
 </tr>
 <tr>
@@ -29,7 +29,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>admin_pro</td>
+	<td>admin_let</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -48,43 +48,28 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Account settings</td>
+	<td>link=Newsletters</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Manage fields</td>
+	<td>link=Add newsletter category</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=edit-fields-add-new-field-label</td>
-	<td>Country</td>
+	<td>id=edit-name</td>
+	<td>newsletter01</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=edit-fields-add-new-field-field-name</td>
-	<td>country</td>
+	<td>id=edit-description</td>
+	<td>Presentation of newsletter01</td>
 </tr>
 <tr>
 	<td>select</td>
-	<td>id=edit-fields-add-new-field-type</td>
-	<td>label=Text</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-submit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-submit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=edit-instance-settings-user-field-privacy</td>
-	<td></td>
+	<td>id=edit-new-account</td>
+	<td>label=Default off</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -93,17 +78,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>Saved Country configuration</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-submit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Your settings have been saved.</td>
+	<td>newsletter01</td>
 	<td></td>
 </tr>
 </tbody></table>
