--- a/sites/all/modules/features/custom/links/selenium/tc/create_private.html
+++ b/sites/all/modules/features/custom/links/selenium/tc/create_private.html
@@ -4,37 +4,32 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>delete</title>
+<title>create_private</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">delete</td></tr>
+<tr><td rowspan="1" colspan="3">create_private</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde</td>
+	<td>/multisite_drupal_wde/en</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//a[contains(text(),'Log out')])[2]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=login</td>
+	<td>link=Log out</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>user_faq</td>
+	<td>fmr_cm</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-pass</td>
-	<td>pass</td>
+	<td>fmr</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -43,23 +38,33 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=toolbar-link-admin-workbench</td>
+	<td>link=communities</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=FAQ01 updated</td>
+	<td>link=third community</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Edit</td>
+	<td>link=Create links</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>id=edit-delete</td>
+	<td>type</td>
+	<td>id=edit-title</td>
+	<td>Private link 4</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=edit-group-access-und-1</td>
 	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-field-link-und-1-url</td>
+	<td>http://www.google.fr</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -67,9 +72,9 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertText</td>
-	<td>css=div.messages.status</td>
-	<td>Status message F.A.Q FAQ01 updated has been deleted.</td>
+	<td>assertTextPresent</td>
+	<td>Links Private link 4 has been created</td>
+	<td></td>
 </tr>
 </tbody></table>
 </body>
