--- a/sites/all/modules/features/custom/links/selenium/ts/propose.html
+++ b/sites/all/modules/features/custom/links/selenium/ts/propose.html
@@ -4,21 +4,16 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>delete</title>
+<title>propose</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">delete</td></tr>
+<tr><td rowspan="1" colspan="3">propose</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>xpath=(//a[contains(text(),'Log out')])[2]</td>
+	<td>/multisite_drupal_wde/en</td>
 	<td></td>
 </tr>
 <tr>
@@ -29,7 +24,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>user_faq</td>
+	<td>contrib03</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -43,22 +38,32 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=toolbar-link-admin-workbench</td>
+	<td>link=Links</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=FAQ01 updated</td>
+	<td>link=Create a Link</td>
 	<td></td>
 </tr>
 <tr>
-	<td>clickAndWait</td>
-	<td>link=Edit</td>
-	<td></td>
+	<td>type</td>
+	<td>id=edit-title</td>
+	<td>link01</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>id=edit-delete</td>
+	<td>id=edit-submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Links link01 has been created.</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Revision state: Draft</td>
 	<td></td>
 </tr>
 <tr>
@@ -67,10 +72,11 @@
 	<td></td>
 </tr>
 <tr>
-	<td>assertText</td>
-	<td>css=div.messages.status</td>
-	<td>Status message F.A.Q FAQ01 updated has been deleted.</td>
+	<td>verifyTextPresent</td>
+	<td>Revision state: Needs Review</td>
+	<td></td>
 </tr>
+
 </tbody></table>
 </body>
 </html>
