MULTISITE-101 : Selenium tests for ideation feature set

--- a/sites/all/modules/features/custom/idea/selenium/ts/browse.html
+++ b/sites/all/modules/features/custom/idea/selenium/ts/browse.html
@@ -4,16 +4,16 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>manage_create</title>
+<title>browse</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">manage_create</td></tr>
+<tr><td rowspan="1" colspan="3">browse</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en/wiki/wiki01</td>
+	<td>/multisite_drupal_wde/en</td>
 	<td></td>
 </tr>
 <tr>
@@ -29,7 +29,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>admin06</td>
+	<td>user_ide2</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -43,30 +43,34 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=my workbench</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Needs Review</td>
+	<td>link=Ideas</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>wiki01</td>
+	<td>idea01</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Published</td>
+	<td>link=idea01</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextNotPresent</td>
-	<td>wiki01</td>
+	<td>verifyTextPresent</td>
+	<td>idea01</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>verifyTextPresent</td>
+	<td>In Action</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Communication</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
