--- a/sites/all/modules/features/custom/idea/selenium/ts/init.html
+++ b/sites/all/modules/features/custom/idea/selenium/ts/init.html
@@ -29,22 +29,22 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>admin06</td>
+	<td>user_ide1</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-mail</td>
-	<td>admin06@email.com</td>
+	<td>user_ide1@email.com</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-field-lastname-und-0-value</td>
-	<td>Admin06</td>
+	<td>User_ide1</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-field-firstname-und-0-value</td>
-	<td>Admin06</td>
+	<td>User</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -64,57 +64,22 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>user06</td>
+	<td>user_ide2</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-mail</td>
-	<td>user06@email.com</td>
+	<td>user_ide2@email.com</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-field-lastname-und-0-value</td>
-	<td>User06</td>
+	<td>User_ide2</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-field-firstname-und-0-value</td>
-	<td>User06</td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-submit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=login</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Create new account</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=edit-name</td>
-	<td>user07</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=edit-mail</td>
-	<td>user07@email.com</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=edit-field-lastname-und-0-value</td>
-	<td>User07</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=edit-field-firstname-und-0-value</td>
-	<td>User07</td>
+	<td>User_ide</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -167,11 +132,6 @@
 	<td></td>
 </tr>
 <tr>
-	<td>click</td>
-	<td>id=edit-roles-3</td>
-	<td></td>
-</tr>
-<tr>
 	<td>clickAndWait</td>
 	<td>id=edit-submit</td>
 	<td></td>
@@ -194,36 +154,6 @@
 <tr>
 	<td>click</td>
 	<td>id=edit-status-1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>id=edit-submit</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>xpath=(//a[contains(text(),'edit')])[3]</td>
-	<td></td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=edit-pass-pass1</td>
-	<td>pass</td>
-</tr>
-<tr>
-	<td>type</td>
-	<td>id=edit-pass-pass2</td>
-	<td>pass</td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=edit-status-1</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=edit-roles-4</td>
 	<td></td>
 </tr>
 <tr>
