--- a/sites/all/modules/features/custom/idea/selenium/ts/post.html
+++ b/sites/all/modules/features/custom/idea/selenium/ts/post.html
@@ -4,21 +4,16 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>manage_create</title>
+<title>propose</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">manage_create</td></tr>
+<tr><td rowspan="1" colspan="3">propose</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en/wiki/wiki01</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Log out</td>
+	<td>/multisite_drupal_wde/en</td>
 	<td></td>
 </tr>
 <tr>
@@ -29,7 +24,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>admin06</td>
+	<td>user_ide1</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -43,30 +38,69 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=my workbench</td>
+	<td>link=Ideas</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Needs Review</td>
+	<td>link=Create a new idea</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-title</td>
+	<td>idea01</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=cke_74_label</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>css=textarea.cke_source.cke_enable_context_menu</td>
+	<td>Presentation of idea01</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=edit-field-watching-und</td>
+	<td></td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=edit-field-status-und</td>
+	<td>label=In Action</td>
+</tr>
+<tr>
+	<td>select</td>
+	<td>id=edit-field-categories-und</td>
+	<td>label=Communication</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
 	<td></td>
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>wiki01</td>
+	<td>idea idea01 has been created.</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Revision state: Draft</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Published</td>
+	<td>id=edit-submit</td>
 	<td></td>
 </tr>
 <tr>
-	<td>verifyTextNotPresent</td>
-	<td>wiki01</td>
+	<td>verifyTextPresent</td>
+	<td>Revision state: Needs Review</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
