MULTISITE-101 - Update Selenium tests for feature ideation

--- a/sites/all/modules/features/custom/idea/selenium/test_standard.html
+++ b/sites/all/modules/features/custom/idea/selenium/test_standard.html
@@ -9,7 +9,8 @@
 <table id="suiteTable" cellpadding="1" cellspacing="1" border="1" class="selenium"><tbody>
 <tr><td><b>Test Suite</b></td></tr>
 <tr><td><a href="ts/init.html">init</a></td></tr>
-<tr><td><a href="ts/post.html">post</a></td></tr>
+<tr><td><a href="ts/propose.html">propose</a></td></tr>
+<tr><td><a href="ts/manage.html">manage</a></td></tr>
 <tr><td><a href="ts/browse.html">browse</a></td></tr>
 <tr><td><a href="ts/rate_comment.html">rate_comment</a></td></tr>
 </tbody></table>
