--- a/sites/all/modules/features/custom/idea/selenium/ts/init.html
+++ b/sites/all/modules/features/custom/idea/selenium/ts/init.html
@@ -29,6 +29,41 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
+	<td>admin_ide</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-mail</td>
+	<td>admin_ide@email.com</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-field-lastname-und-0-value</td>
+	<td>Admin_ide</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-field-firstname-und-0-value</td>
+	<td>Admin</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=login</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Create new account</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-name</td>
 	<td>user_ide1</td>
 </tr>
 <tr>
@@ -154,6 +189,36 @@
 <tr>
 	<td>click</td>
 	<td>id=edit-status-1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>xpath=(//a[contains(text(),'edit')])[3]</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-pass-pass1</td>
+	<td>pass</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-pass-pass2</td>
+	<td>pass</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=edit-status-1</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>id=edit-roles-3</td>
 	<td></td>
 </tr>
 <tr>
