--- a/sites/all/modules/features/custom/idea/selenium/ts/rate_comment.html
+++ b/sites/all/modules/features/custom/idea/selenium/ts/rate_comment.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>manage</title>
+<title>rate_comment</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">manage</td></tr>
+<tr><td rowspan="1" colspan="3">rate_comment</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
