MULTISITE-101 : Update Selenium tests

--- a/sites/all/modules/features/custom/e_library/selenium/ts/browse.html
+++ b/sites/all/modules/features/custom/e_library/selenium/ts/browse.html
@@ -71,6 +71,11 @@
 	<td>link=document_example.txt</td>
 	<td></td>
 </tr>
+<tr>
+	<td>open</td>
+	<td>/multisite_drupal_fmr/en/content/document01</td>
+	<td></td>
+</tr>
 
 </tbody></table>
 </body>
