--- a/sites/all/modules/features/custom/links/selenium/ts/manage.html
+++ b/sites/all/modules/features/custom/links/selenium/ts/manage.html
@@ -43,7 +43,7 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=my workbench</td>
+	<td>link=My workbench</td>
 	<td></td>
 </tr>
 <tr>
@@ -53,7 +53,7 @@
 </tr>
 <tr>
 	<td>verifyTextPresent</td>
-	<td>event01</td>
+	<td>link01</td>
 	<td></td>
 </tr>
 <tr>
@@ -63,7 +63,7 @@
 </tr>
 <tr>
 	<td>verifyTextNotPresent</td>
-	<td>event01</td>
+	<td>link01</td>
 	<td></td>
 </tr>
 
