--- a/sites/all/modules/features/custom/wiki/selenium/ts/browse_edit.html
+++ b/sites/all/modules/features/custom/wiki/selenium/ts/browse_edit.html
@@ -68,12 +68,17 @@
 </tr>
 <tr>
 	<td>click</td>
-	<td>css=p</td>
+	<td>id=cke_74_label</td>
 	<td></td>
 </tr>
 <tr>
+	<td>type</td>
+	<td>css=textarea.cke_source.cke_enable_context_menu</td>
+	<td>&lt;p&gt;Presentation of wiki01 updated&lt;/p&gt;<br /></td>
+</tr>
+<tr>
 	<td>click</td>
-	<td>css=html.js</td>
+	<td>css=div.text-format-wrapper</td>
 	<td></td>
 </tr>
 <tr>
