--- a/sites/all/modules/features/custom/wiki/selenium/ts/propose.html
+++ b/sites/all/modules/features/custom/wiki/selenium/ts/propose.html
@@ -57,6 +57,21 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>id=cke_74_label</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>css=textarea.cke_source.cke_enable_context_menu</td>
+	<td>Presentation of wiki01</td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=#wiki-node-form &gt; div</td>
+	<td></td>
+</tr>
+<tr>
 	<td>clickAndWait</td>
 	<td>id=edit-submit</td>
 	<td></td>
