--- a/sites/all/modules/features/custom/wiki/selenium/ts/restore.html
+++ b/sites/all/modules/features/custom/wiki/selenium/ts/restore.html
@@ -53,7 +53,27 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Revisions</td>
+	<td>link=Moderate</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=revert</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextPresent</td>
+	<td>Are you sure you want to revert to the revision from</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
 	<td></td>
 </tr>
 
