--- a/sites/all/modules/features/custom/e_library/selenium/ts/propose.html
+++ b/sites/all/modules/features/custom/e_library/selenium/ts/propose.html
@@ -57,9 +57,24 @@
 	<td></td>
 </tr>
 <tr>
+	<td>click</td>
+	<td>id=cke_74_label</td>
+	<td></td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>css=textarea.cke_source.cke_enable_context_menu</td>
+	<td>Presentation of document01</td>
+</tr>
+<tr>
 	<td>type</td>
 	<td>id=edit-field-document-und-0-upload</td>
-	<td>.\document_example.txt</td>
+	<td>D:\samples\document_example.txt</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-field-document-und-0-upload-button</td>
+	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -101,7 +116,6 @@
 	<td>Document01</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
