--- a/sites/all/modules/features/custom/idea/selenium/ts/manage.html
+++ b/sites/all/modules/features/custom/idea/selenium/ts/manage.html
@@ -4,12 +4,12 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>rate_comment</title>
+<title>manage</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">rate_comment</td></tr>
+<tr><td rowspan="1" colspan="3">manage</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
@@ -18,38 +18,23 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Ideas</td>
+	<td>link=Log out</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=idea01</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Give it 4/5</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Average: 4 (1 vote)</td>
-	<td></td>
-</tr>
-<tr>
-	<td>clickAndWait</td>
-	<td>link=Add new comment</td>
-	<td></td>
-</tr>
-<tr>
-	<td>click</td>
-	<td>id=cke_8_label</td>
+	<td>link=login</td>
 	<td></td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>css=textarea.cke_source.cke_enable_context_menu</td>
-	<td>Excellent idea !</td>
+	<td>id=edit-name</td>
+	<td>admin_ide</td>
+</tr>
+<tr>
+	<td>type</td>
+	<td>id=edit-pass</td>
+	<td>pass</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -57,8 +42,33 @@
 	<td></td>
 </tr>
 <tr>
+	<td>clickAndWait</td>
+	<td>link=My workbench</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Needs Review</td>
+	<td></td>
+</tr>
+<tr>
 	<td>verifyTextPresent</td>
-	<td>Excellent idea !</td>
+	<td>idea01</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Published</td>
+	<td></td>
+</tr>
+<tr>
+	<td>verifyTextNotPresent</td>
+	<td>idea01</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>xpath=(//a[contains(text(),'Log out')])[2]</td>
 	<td></td>
 </tr>
 </tbody></table>
