--- a/sites/all/modules/features/custom/links/selenium/ts/browse.html
+++ b/sites/all/modules/features/custom/links/selenium/ts/browse.html
@@ -66,7 +66,11 @@
 	<td>What is URL.com?</td>
 	<td></td>
 </tr>
-
+<tr>
+	<td>open</td>
+	<td>/multisite_drupal_fmr/en/links</td>
+	<td></td>
+</tr>
 </tbody></table>
 </body>
 </html>
