MULTISITE-515 : modify Features likedislike add language recognize and add selenium test

--- a/sites/all/modules/features/custom/e_library/selenium/ts/init.html
+++ b/sites/all/modules/features/custom/e_library/selenium/ts/init.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
+<link rel="selenium.base" href="http://fpfis-dev/multisite_drupal_tbr3/en" />
 <title>init</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en</td>
+	<td>/multisite_drupal_tbr3/en</td>
 	<td></td>
 </tr>
 <tr>
@@ -29,22 +29,22 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>admin01</td>
+	<td>admin02</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-mail</td>
-	<td>admin01@email.com</td>
+	<td>admin02@email.com</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-field-lastname-und-0-value</td>
-	<td>Admin01</td>
+	<td>admin02</td>
 </tr>
 <tr>
 	<td>type</td>
 	<td>id=edit-field-firstname-und-0-value</td>
-	<td>Admin01</td>
+	<td>admin02</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -241,7 +241,6 @@
 	<td>link=Log out</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
