--- a/sites/all/modules/features/custom/e_library/selenium/ts/propose.html
+++ b/sites/all/modules/features/custom/e_library/selenium/ts/propose.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
+<link rel="selenium.base" href="http://fpfis-dev/multisite_drupal_tbr3/en" />
 <title>propose</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en</td>
+	<td>/multisite_drupal_tbr3/en</td>
 	<td></td>
 </tr>
 <tr>
@@ -69,7 +69,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-field-document-und-0-upload</td>
-	<td>D:\samples\document_example.txt</td>
+	<td>F:\samples\document_example.txt</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
