--- a/sites/all/modules/features/custom/e_library/selenium/ts/manage.html
+++ b/sites/all/modules/features/custom/e_library/selenium/ts/manage.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
+<link rel="selenium.base" href="http://fpfis-dev/multisite_drupal_tbr3/en" />
 <title>manage</title>
 </head>
 <body>
@@ -13,7 +13,7 @@
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_wde/en/e_library</td>
+	<td>/multisite_drupal_tbr3/en/e_library</td>
 	<td></td>
 </tr>
 <tr>
@@ -29,7 +29,7 @@
 <tr>
 	<td>type</td>
 	<td>id=edit-name</td>
-	<td>admin01</td>
+	<td>admin02</td>
 </tr>
 <tr>
 	<td>type</td>
@@ -76,7 +76,6 @@
 	<td>Document01</td>
 	<td></td>
 </tr>
-
 </tbody></table>
 </body>
 </html>
