--- a/sites/all/modules/features/custom/likedislike/selenium/ts/init.html
+++ b/sites/all/modules/features/custom/likedislike/selenium/ts/init.html
@@ -4,21 +4,26 @@
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <link rel="selenium.base" href="http://fpfis-dev/multisite_drupal_tbr3/en" />
-<title>browse</title>
+<title>Init</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">browse</td></tr>
+<tr><td rowspan="1" colspan="3">Init</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/multisite_drupal_tbr3/en/e_library</td>
+	<td>/multisite_drupal_tbr3/</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>xpath=(//a[contains(text(),'Log out')])[2]</td>
+	<td>link=Home</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Log out</td>
 	<td></td>
 </tr>
 <tr>
@@ -28,13 +33,13 @@
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=edit-name</td>
-	<td>user01</td>
+	<td>id=edit-pass</td>
+	<td>pass</td>
 </tr>
 <tr>
 	<td>type</td>
-	<td>id=edit-pass</td>
-	<td>pass</td>
+	<td>id=edit-name</td>
+	<td>admin</td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
@@ -43,39 +48,50 @@
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=E-library</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Document01</td>
+	<td>id=toolbar-link-admin-config</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=Document01</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Presentation of document01</td>
-	<td></td>
-</tr>
-<tr>
-	<td>verifyTextPresent</td>
-	<td>Revision state: Published</td>
+	<td>link=Languages</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=document_example.txt</td>
+	<td>link=Add language</td>
 	<td></td>
 </tr>
 <tr>
-	<td>open</td>
-	<td>/multisite_drupal_tbr3/en/content/document01</td>
+	<td>select</td>
+	<td>id=edit-langcode</td>
+	<td>label=French (Français)</td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>id=edit-submit</td>
 	<td></td>
 </tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Home</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>link=x</td>
+	<td></td>
+</tr>
+<tr>
+	<td>click</td>
+	<td>css=a &gt; img</td>
+	<td></td>
+</tr>
+<tr>
+	<td>clickAndWait</td>
+	<td>link=Français (fr)</td>
+	<td></td>
+</tr>
+
 </tbody></table>
 </body>
 </html>
