--- a/sites/all/modules/features/custom/feed_rss_core/selenium/test_standard.html
+++ b/sites/all/modules/features/custom/feed_rss_core/selenium/test_standard.html
@@ -3,34 +3,25 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head profile="http://selenium-ide.openqa.org/profiles/test-case">
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<link rel="selenium.base" href="http://158.167.34.191/multisite_drupal_wde/en" />
-<title>read</title>
+<link rel="selenium.base" href="http://172.24.135.81/multisite_drupal_tbr" />
+<title>Init</title>
 </head>
 <body>
 <table cellpadding="1" cellspacing="1" border="1">
 <thead>
-<tr><td rowspan="1" colspan="3">read</td></tr>
+<tr><td rowspan="1" colspan="3">Init</td></tr>
 </thead><tbody>
 <tr>
 	<td>open</td>
-	<td>/mumultisite_drupal_tbr</td>
+	<td>/multisite_drupal_tbr/</td>
 	<td></td>
 </tr>
 <tr>
 	<td>clickAndWait</td>
-	<td>link=F.A.Q</td>
+	<td>link=Home</td>
 	<td></td>
 </tr>
-<tr>
-	<td>click</td>
-	<td>link=FAQ01</td>
-	<td></td>
-</tr>
-<tr>
-	<td>assertTextPresent</td>
-	<td>Answer01</td>
-	<td></td>
-</tr>
+
 </tbody></table>
 </body>
 </html>
